src/objects/AWS_S3_Object__c.object
<CustomObject>
    <description>Represents a bucket and object name as it exists on Amazon S3</description>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FULL_CONTROL</fullName>
                </value>
                <value>
                    <fullName>public-read</fullName>
                </value>
                <value>
                    <fullName>WRITE</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                    <default>true</default>
                    <label>Private</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <label>Bucket Name</label>
        <length>122</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Type__c</fullName>
        <label>Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_Shareable_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Shareable Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deposition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposition</label>
        <referenceTo>Deposition__c</referenceTo>
        <relationshipName>AWS_S3_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Download_Log__c</fullName>
        <label>Download Log</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_Id__c</fullName>
        <externalId>true</externalId>
        <label>File Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name_With_Version__c</fullName>
        <formula>SUBSTITUTE(IF(Version_Number__c = 0,File_Name__c,LEFT(File_Name__c,LEN(File_Name__c) - LEN(RIGHT(File_Name__c,LEN(File_Name__c) - FIND(&quot;.&quot;, File_Name__c) +1)) )+ &apos;V&apos;+Text(Version_Number__c)+RIGHT(File_Name__c,LEN(File_Name__c)+1 - FIND(&quot;.&quot;, File_Name__c) )), &apos; &apos;, &apos;+&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Name With Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size_KB__c</fullName>
        <formula>IF(ROUND(File_Size__c/1024,0)&lt;1024,TEXT(ROUND(File_Size__c/1024,0) )&amp;&apos;k&apos;,TEXT(ROUND((File_Size__c/1024)/1024,0) )&amp;&apos; MB&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Size</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <label>File Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deposition Notice</fullName>
                </value>
                <value>
                    <fullName>Exhibit</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Signature Page</fullName>
                </value>
                <value>
                    <fullName>Transcript</fullName>
                </value>
                <value>
                    <fullName>Turn-in Sheet</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Order Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Url__c</fullName>
        <formula>&apos;https://s3.amazonaws.com/&apos; &amp; Bucket_Name__c &amp;&apos;/&apos; &amp; Folder_Path__c &amp; File_Name_With_Version__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Path__c</fullName>
        <label>Folder Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <formula>Upload_Files__r.IP_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <formula>Note__c != NULL &amp;&amp; Note__c !=&apos;&apos;</formula>
        <label>Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Folder_Id__c</fullName>
        <formula>Deposition__r.Google_Drive_Folder_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Folder Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PastTime_55Min__c</fullName>
        <formula>NOW() - (55/1440)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PastTime 55Min</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Preview_Link__c</fullName>
        <formula>HYPERLINK( &apos;/apex/SecureDownload?id=&apos;+ Id, &apos;View/Download File&apos;
 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Open the resource in a new window</inlineHelpText>
        <label>Preview Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shareable_Link__c</fullName>
        <formula>IF(Create_Shareable_Link__c, HYPERLINK(&apos;http://nextgen.force.com/PublicDownload?id=&apos;+ Id , &apos;http://nextgen.force.com/PublicDownload?id=&apos;+ Id ) ,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shareable Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Files__c</fullName>
        <label>Upload Batches</label>
        <referenceTo>Upload_Files__c</referenceTo>
        <relationshipName>AWS_S3_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Upload_No__c</fullName>
        <label>Upload No</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Version_Number__c</fullName>
        <label>Version Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>File</label>
    <nameField>
        <displayFormat>File-{0000}</displayFormat>
        <label>File No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Files</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>